# ProbABEL

./: .cproject  .gitignore  .project  .travis.yml  Makefile  Makefile.am  Makefile.in  README.org  configure  configure.ac
ProbABEL/tests/: Makefile.am
ProbABEL/tests/verified_results/: height_base_add.out.txt
checks/: Makefile.am  check_dose_input.sh  check_pacoxph_nocovar.sh  check_probabel.pl_chunk.sh  check_probabel_chunk.sh  compare_with_old.sh  run_diff.sh  test_bt.sh  test_cox.sh  test_cox_interactions.sh  test_cox_nocovar.sh  test_flipmaf_pacoxph.sh  test_flipmaf_palinear.sh  test_flipmaf_palogist.sh  test_mms.sh  test_qt.sh  verify_flipmaf.awk
checks/R-tests/: Makefile.am  initial_checks.R  run_R_test_pacox.sh  run_R_test_palinear.sh  run_model_coxph.R  run_model_linear.R  run_model_logist.R  run_models_in_R_pacox.R  run_models_in_R_palinear.R  run_models_in_R_palogist.R
checks/inputfiles/: README  coxph_data_nocovar.txt  mmscore_gen.mlinfo  mmscore_gen.small.mldose  test.dose.fvd  test.dose.fvi  test.map  test.mldose  test.mlinfo  test.mlprob  test.prob.fvd  test.prob.fvi
checks/old_verified_results/: height_allcov_add.out.txt.save  height_int1_add.out.txt.save  height_ngp2_add.out.txt.save  height_ngp2_allcov_2df.out.txt.save  height_ngp2_allcov_add.out.txt.save  height_ngp2_allcov_over_domin.out.txt.save  height_ngp2_over_domin.out.txt.save  height_ngp2_robust_domin.out.txt.save  height_ngp2_robust_int1_over_domin.out.txt.save  height_ngp2_robust_over_domin.out.txt.save  height_robust_add.out.txt.save  height_robust_int1_add.out.txt.save  logist.out.txt_add.out.txt.save  regression_add.out.txt.save
checks/old_verified_results/test_other/: height_ngp2_add.out.txt  height_ngp2_allcov_2df.out.txt  height_ngp2_allcov_recess.out.txt  height_ngp2_int1_domin.out.txt  height_ngp2_int1_fv_2df.out.txt  height_ngp2_int1_fv_over_domin.out.txt  height_ngp2_robust_2df.out.txt  height_ngp2_robust_fv_domin.out.txt  height_robust_fv_add.out.txt  (+1 more)
checks/verified_results/: height_add.out.txt  height_base_add.out.txt  height_ngp2_2df.out.txt  height_ngp2_add.out.txt  height_ngp2_domin.out.txt  height_ngp2_over_domin.out.txt  height_ngp2_recess.out.txt
doc/: COPYING  ChangeLog  Doxyfile  Doxyfile.in  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  ProbABEL_manual.tex  QuickStart.txt  README.dox  TODO  extract-snp.1  manual.aux  manual.dvi  manual.tex  manual.toc  packaging.txt  pacoxph.1  palinear.1  palogist.1  probabel.1  probabel.pl.1  short_coxph_data.txt  short_height.out.csv  short_height.txt  short_height_base_add.out.txt.save  short_logist_data.txt  test.mlinfo  test_regression.R
examples/: Makefile.am  README  compare_with_old_short.sh  coxph.out.txt_add.out.txt  coxph.out.txt_add.out.txt.save  coxph_data.txt  example_all.sh  example_bt.sh  example_cox.sh  example_mms.sh  example_mmscore.sh  example_palinear_simple.sh  example_qt.sh  example_qt_miss.sh  height.out.txt_add.out.txt  height_ngp2_2df.out.txt.save  height_ngp2_domin.out.txt.save  height_ngp2_int1_2df.out.txt.save  height_ngp2_int1_add.out.txt.save  height_ngp2_int1_domin.out.txt.save  height_ngp2_robust_2df.out.txt.save  height_ngp2_robust_add.out.txt.save  height_ngp2_robust_int1_add.out.txt.save  height_ngp2_robust_int1_domin.out.txt.save  height_ngp2_robust_int1_recess.out.txt.save  impute_with_missing.PHE  impute_with_missing.dose.fvd  impute_with_missing.dose.fvi  impute_with_missing.mlinfo  impute_with_missing_add.out.txt.save  impute_with_missing_allcov_add.out.txt.save  impute_with_missing_int1_add.out.txt.save  impute_with_missing_robust_add.out.txt.save  impute_with_missing_robust_int1_add.out.txt.save  logist.out.txt_add.out.txt  logist_data.txt  mmscore.R  mmscore.output_add.out.txt  mmscore.output_add.out.txt.save  mmscore.sh  (+22 more)
examples/gtdata/: mmscore_gen.mlprob  test.dose.fvd  test.dose.fvi  test.map  test.mlinfo  test.mlprob
examples/test_cox_ngpreds2/: run_models_in_R.R  run_models_in_R_pacox.R  run_models_in_R_palinear.R
examples/test_other/: height.txt  height_allcov_fv_add.out.txt  height_ngp2_allcov_fv_add.out.txt  height_ngp2_allcov_fv_over_domin.out.txt  height_ngp2_fv_2df.out.txt  height_ngp2_int1_add.out.txt  height_ngp2_int1_fv_recess.out.txt  height_ngp2_over_domin.out.txt  height_ngp2_robust_fv_recess.out.txt  height_ngp2_robust_int1_2df.out.txt  height_ngp2_robust_int1_add.out.txt  height_ngp2_robust_int1_fv_over_domin.out.txt  height_robust_int1_fv_add.out.txt  mmscore_add.out.txt  mmscore_prob_fv_add.out.txt
src/: 3.2.1.tar.bz2  Makefile.am  Makefile.in  chinv2.c  cholesky.cpp  cholesky.h  chsolve2.c  comand_line_settings.cpp  comand_line_settings.h  command_line_settings.cpp  command_line_settings.h  config.h.in  coxfit2.c  coxph.fit.s  coxph.s  coxph_data.cpp  coxph_data.h  coxph_reg.cpp  coxph_reg.h  data.cpp  data.h  dmatrix.c  eigen_mematri1.h  eigen_mematrix.cpp  eigen_mematrix.h  extract-snp.cpp  fvlib  gendata.cpp  gendata.h  invsigma.cpp  invsigma.h  main.cpp  main_functions_dump.cpp  main_functions_dump.h  maskedmatrix.cpp  maskedmatrix.h  mematri1.h  mematrix.h  mlinfo.cpp  mlinfo.h  (+19 more)
src/fvlib/: AbstractMatrix.cpp  AbstractMatrix.h  CastUtils.cpp  CastUtils.h  FileVector.cpp  FileVector.h  FilteredMatrix.cpp  FilteredMatrix.h  Logger.cpp  Logger.h  RealHandlerWrapper.cpp  RealHandlerWrapper.h  ReusableFileHandle.cpp  ReusableFileHandle.h  Transposer.cpp  Transposer.h  const.h  convert_util.cpp  convert_util.h  frutil.cpp  frutil.h  frversion.h  fvflib.uxf
src/include/: Defn.h  Rinlinedfuns.h  Rmath.h
tests/: Makefile.am  check_dose_input.sh  check_probabel.pl_chunk.sh
tests/R-tests/: Makefile.am  initial_checks.R  run_R_test_pacox.sh  run_R_test_palinear.sh  run_R_test_palogist.sh  run_models_in_R_pacox.R  run_models_in_R_palinear.R  run_models_in_R_palogist.R
tests/test_cox_ngpreds2/: run_models_in_R_pacox.R  run_models_in_R_palinear.R
tests/verified_results/: height_add.out.txt  height_base_add.out.txt  height_ngp2_2df.out.txt  height_ngp2_add.out.txt  height_ngp2_domin.out.txt  height_ngp2_over_domin.out.txt  height_ngp2_recess.out.txt
(+43 files in other folders)
