AUTOMAKE_OPTIONS = foreign
SUBDIRS = src

docfiles = doc/ProbABEL_manual.pdf doc/ProbABEL_manual.tex		\
 doc/QuickStart.txt doc/short_coxph_data.txt doc/short_height.out.csv	\
 doc/short_height.txt doc/short_logist_data.txt doc/test_regression.R	\
 doc/COPYING doc/LICENSE doc/INSTALL doc/CHANGES.LOG doc/TODO
examplefiles =								\
 examples/height_ngp2_robust_int1_over_domin.out.txt.save		\
 examples/test.prob.fvi examples/mmscore_gen.prob.fvd			\
 examples/test.map examples/mldose.IDS					\
 examples/impute_with_missing.mlinfo					\
 examples/height_ngp2_robust_int1_recess.out.txt.save			\
 examples/height_ngp2_2df.out.txt.save examples/mmscore_gen.mlprob	\
 examples/mmscore_gen.mlinfo						\
 examples/height_ngp2_robust_recess.out.txt.save			\
 examples/example_cox.sh examples/test.mlprob examples/test.prob.fvd	\
 examples/impute_with_missing_robust_int1_add.out.txt.save		\
 examples/test.mlinfo examples/regression_add.out.txt.save		\
 examples/height_ngp2_robust_add.out.txt.save				\
 examples/mmscore_gen.dose.fvi						\
 examples/impute_with_missing_allcov_add.out.txt.save			\
 examples/example_bt.sh examples/height_ngp2_int1_recess.out.txt.save	\
 examples/example_qt.sh examples/coxph_data.txt				\
 examples/height_ngp2_robust_int1_domin.out.txt.save			\
 examples/height_ngp2_allcov_2df.out.txt.save				\
 examples/impute_with_missing_int1_add.out.txt.save			\
 examples/mmscore_gen.mldose examples/example_mms.sh			\
 examples/height_ngp2_recess.out.txt.save				\
 examples/height_ngp2_over_domin.out.txt.save				\
 examples/height_ngp2_int1_domin.out.txt.save				\
 examples/height_ngp2_allcov_domin.out.txt.save				\
 examples/height_ngp2_robust_over_domin.out.txt.save			\
 examples/height_ngp2_robust_int1_add.out.txt.save			\
 examples/height_int1_add.out.txt.save					\
 examples/height_allcov_add.out.txt.save				\
 examples/impute_with_missing_base_add.out.txt.save			\
 examples/example_all.sh examples/height_base_add.out.txt.save		\
 examples/height_ngp2_int1_over_domin.out.txt.save			\
 examples/height_robust_add.out.txt.save examples/test.mldose		\
 examples/height_ngp2_allcov_add.out.txt.save				\
 examples/mmscore_InvSigma_aj.sex.age.dat				\
 examples/height_ngp2_robust_int1_2df.out.txt.save			\
 examples/mmscore_gen.dose.fvd examples/mmscore.R			\
 examples/test.dose.fvd examples/height_ngp2_domin.out.txt.save		\
 examples/test.dose.fvi							\
 examples/impute_with_missing_robust_add.out.txt.save			\
 examples/allheight.txt examples/mmscore_add.out.txt.save		\
 examples/coxph.out.txt_add.out.txt.save examples/mmscore_pheno.PHE	\
 examples/height_ngp2_robust_2df.out.txt.save				\
 examples/height_ngp2_int1_add.out.txt.save				\
 examples/mmscore_gen.prob.fvi						\
 examples/height_robust_int1_add.out.txt.save				\
 examples/logist.out.txt_add.out.txt.save				\
 examples/height_ngp2_allcov_recess.out.txt.save			\
 examples/impute_with_missing.PHE					\
 examples/height_ngp2_allcov_over_domin.out.txt.save			\
 examples/height_ngp2_add.out.txt.save examples/logist_data.txt		\
 examples/height_ngp2_int1_2df.out.txt.save				\
 examples/impute_with_missing_add.out.txt.save				\
 examples/height_ngp2_robust_domin.out.txt.save examples/height.txt

dist_doc_DATA = $(docfiles)

exampledir = $(pkgdatadir)/examples
dist_example_DATA = $(examplefiles)
